스우파를 찾아서 최종

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- css 링크 추가 -->
     <link rel="stylesheet" href="style.css">
-    <title>swf</title>
+    <title>Document</title>
 </head>
 <body>
     <div>Teachable Machine Image Model</div>
 <button type="button" onclick="init()">Start</button>
-<!-- 이미지 업로더 코드 -->
+<button type="button" onclick="predict()">predict</button>
+<!-- 이미지 업로드 html 붙이기-->
 <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <div class="file-upload">
   <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
@@ -22,14 +24,14 @@
     </div>
   </div>
   <div class="file-upload-content">
-    <img class="file-upload-image" src="#" alt="your image" />
+    <img class="file-upload-image" id="face-image" src="#" alt="your image" />
     <div class="image-title-wrap">
       <button type="button" onclick="removeUpload()" class="remove-image">Remove <span class="image-title">Uploaded Image</span></button>
     </div>
   </div>
 </div>
-<!-- 이미지 업로더 종료 -->
-<div id="webcam-container"></div>
+<!-- 이미지 업로드 html 붙이기 종료-->
+<!--<div id="webcam-container"></div>-->
 <div id="label-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
@@ -54,35 +56,43 @@
         model = await tmImage.load(modelURL, metadataURL);
         maxPredictions = model.getTotalClasses();
 
+        //삭제 부분
         // Convenience function to setup a webcam
-        const flip = true; // whether to flip the webcam
-        webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
-        await webcam.setup(); // request access to the webcam
-        await webcam.play();
-        window.requestAnimationFrame(loop);
-
+        //const flip = true; // whether to flip the webcam
+        //webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
+        //await webcam.setup(); // request access to the webcam
+        //await webcam.play();
+        //window.requestAnimationFrame(loop);
+        //삭제 부분
         // append elements to the DOM
-        document.getElementById("webcam-container").appendChild(webcam.canvas);
+        //document.getElementById("webcam-container").appendChild(webcam.canvas);
         labelContainer = document.getElementById("label-container");
         for (let i = 0; i < maxPredictions; i++) { // and class labels
             labelContainer.appendChild(document.createElement("div"));
         }
     }
 
-    async function loop() {
-        webcam.update(); // update the webcam frame
-        await predict();
-        window.requestAnimationFrame(loop);
-    }
+    //삭제 부분
+    //async function loop() {
+    //    webcam.update(); // update the webcam frame
+    //    await predict();
+    //    window.requestAnimationFrame(loop);
+    //}
 
     // run the webcam image through the image model
     async function predict() {
         // predict can take in an image, video or canvas html element
-        const prediction = await model.predict(webcam.canvas);
-        
+        //이미지 변수 정의
+        var image = document.getElementById('face-image')
+        const prediction = await model.predict(image, false);
+        for (let i = 0; i < maxPredictions; i++) {
+            const classPrediction =
+                prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+            labelContainer.childNodes[i].innerHTML = classPrediction;
+        }
     }
 </script>
-<!-- 이미지 업로더 js-->
+<!-- 이미지 업로드 자바스크립트 추가-->
 <script>
     function readURL(input) {
         if (input.files && input.files[0]) {
@@ -115,9 +125,10 @@
           });
           $('.image-upload-wrap').bind('dragleave', function () {
               $('.image-upload-wrap').removeClass('image-dropping');
-      });      
+      });
+ 
 </script>
-<!-- 이미지 업로더 js 종료-->
+<!-- 이미지 업로드 자바스크립트 추가 종료-->
 
 </body>
 <!-- Copyright (c) 2021 by Aaron Vanston (https://codepen.io/aaronvanston/pen/yNYOXR)
@@ -126,5 +137,6 @@ Permission is hereby granted, free of charge, to any person obtaining a copy of 
 
 The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. -->
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+ -->
 </html>
